apply JDK 21 API improvements