@@ -108,7 +108,7 @@ public class OutputController {
 		outputPath.addListener(o -> updateIsReadyToGenerate());
 
 		this.report = report;
-		invoices.addAll(report.getInvoicables().stream().map(Invoicable::toInvoice).collect(Collectors.toList()));
+		invoices.addAll(report.getInvoicables().stream().map(Invoicable::toInvoice).toList());
 		//we start numbering at 1 and fill possible gaps, when a subsidiary is missing
 		for(int i=0; i<invoices.size();i++){
 			invoices.get(i).setId(String.valueOf(i+1));
